Fix vertical alignment. Replace clock with wider quarter text. Update netcore to v2.0.0

--- a/sass/graphic/bar-text.scss
+++ b/sass/graphic/bar-text.scss
@@ -54,7 +54,7 @@ body.in #bar-outline {
 
     span {
       margin: auto;
-      margin-top: 14px;
+      // margin-top: 14px;
     }
   }
 
@@ -94,12 +94,12 @@ body.in #bar-outline {
     #quarter, #clock {
       display: inline-block;
 
-      margin-top: 5px;
+      // margin-top: 5px;
     }
 
     #quarter {
       text-align: left;
-      margin-left: -10px;
+      // margin-left: -10px;
     }
     #clock {
       text-align: right;
@@ -142,7 +142,7 @@ body.in #bar-outline {
     height: 54px;
 
     .text {
-      margin-top: 10px;
+      // margin-top: 10px;
       text-align: center;
     }
   }
